--- a/estilo.css
+++ b/estilo.css
@@ -1,1 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&family=Play:wght@400;700&display=swap');
+body {
+    background-color: #5C4033;
+    font-size: 16pt;
+    text-align: center;
+    font-family: 'Octavio Pardo';
+}
 
+header {
+    color: white;
+    text-shadow: 2px 2px 3px #EBC79E;
+}
+
+section {
+    background-color: #97694F;
+    width: 300px;
+    margin: auto;
+    border-radius: 30px;
+    box-shadow: 5px 5px 5px #EBC79E;
+    padding: 20px; 
+}
+
+img {
+    width: 100%;
+    max-width: 100px; 
+    border-radius: 20%;
+    box-sizing: border-box; 
+}
+
+footer {
+    color: white;
+    text-shadow: 2px 2px 3px #EBC79E;
+}
